--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nx/nest": "^20.1.3",
     "@nx/node": "20.1.3",
     "@nx/playwright": "20.1.3",
+    "@nx/plugin": "^20.1.3",
     "@nx/vite": "20.1.3",
     "@nx/web": "20.1.3",
     "@nx/webpack": "20.1.3",
