--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@playwright/test": "1.48.0",
     "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
