--- a/libs/internal-plugin/package.json
+++ b/libs/internal-plugin/package.json
@@ -9,5 +9,8 @@
   "main": "./src/index.js",
   "typings": "./src/index.d.ts",
   "private": true,
-  "generators": "./generators.json"
+  "generators": "./generators.json",
+  "devDependencies": {
+    "@nx/js": "^20.1.3"
+  }
 }
