--- a/libs/api/util-notifications/package.json
+++ b/libs/api/util-notifications/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@nx-workshop/internal-plugin",
+  "name": "@nx-workshop/api-util-notifications",
   "version": "0.0.1",
   "dependencies": {
-    "@nx/js": "20.1.3",
-    "@nx/devkit": "20.1.3",
     "tslib": "^2.3.0"
   },
   "type": "commonjs",
   "main": "./src/index.js",
   "typings": "./src/index.d.ts",
-  "private": true,
-  "generators": "./generators.json"
+  "private": true
 }
