--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/testing": "^10.0.2",
     "@nx/angular": "20.1.3",
     "@nx/devkit": "20.1.3",
+    "@nx/esbuild": "20.1.3",
     "@nx/eslint": "20.1.3",
     "@nx/eslint-plugin": "20.1.3",
     "@nx/jest": "20.1.3",
@@ -62,6 +63,7 @@
     "@typescript-eslint/utils": "^8.0.0",
     "@vitest/ui": "^1.3.1",
     "angular-eslint": "18.4.2",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^1.6.2",
