--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -53,7 +53,13 @@
       "@nx-workshop/shared/util-env-token": [
         "libs/shared/util-env-token/src/index.ts"
       ],
-      "@nx-workshop/shared/utils": ["libs/shared/utils/src/index.ts"]
+      "@nx-workshop/shared/utils": ["libs/shared/utils/src/index.ts"],
+      "@nx-workshop/util-notifications": [
+        "libs/api/util-notifications/src/index.ts"
+      ],
+      "@nx-workshop/util-notificationss": [
+        "libs/api/api-util-notificationss/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
