--- a/nx.json
+++ b/nx.json
@@ -10,7 +10,8 @@
       "!{projectRoot}/tsconfig.spec.json",
       "!{projectRoot}/jest.config.[jt]s",
       "!{projectRoot}/src/test-setup.[jt]s",
-      "!{projectRoot}/test-setup.[jt]s"
+      "!{projectRoot}/test-setup.[jt]s",
+      { "runtime": "date" }
     ],
     "sharedGlobals": ["{workspaceRoot}/.github/workflows/workshop-ci.yml"]
   },
